@@ -1,9 +1,131 @@
+# The architecture
+
+This project uses Maven 3.3 or higher and was developed using Java 8 through the JavaEE Framework. It was tested in a Wildfly 10, that have a Data Source called AppDS. There are two ways to run this application.
+
+**1** Running in a container Java Like WildFly or Jboss
+
+Build the .war file and deploy it, copying this file in the deployments folder in a wildfly or Jboss EAP. 
+
+To build run the war
+
+``
+ mvn clean package`
+
+```
+PS: You will need to have Data Source AppDS set in your server.
+
+
+**2** Running the application in docker
+
+Just copy the docker-compose.yml to some directory on yout machine and run:
+
+
+```
+ docker-compose up
+
+```
+
+PS: You will need to have docker 1.13 or Higher and docker-compose 1.10 or higher.
+
+
+a **docker-compose.yml**, that uses some images that I have build and pushed to docker hub to run this assigment.
+
+
+
+```
+version: '3'
+services:
+
+  java-api:
+    image: adrianofonseca/waes:latest
+    ports:
+     - "8080:8080"
+     - "9990:9990"
+    networks:
+      - app
+    depends_on:
+      - postgres
+    deploy:
+     replicas: 1
+     update_config:
+       parallelism: 1
+       delay: 30s
+     restart_policy:
+       condition: on-failure 
+     labels: [info=backend]
+
+
+  postgres:
+      image: adrianofonseca/postgres:9.5
+      ports:
+          - "5432:5432"
+      networks:
+      - app
+      environment:
+          - DEBUG=false
+          - DB_USER=app
+          - DB_PASS=app
+          - DB_NAME=app
+      volumes:
+          -  /home/adr-fonseca/docker/docker-postgres/postgresql/:/var/lib/postgresql
+      deploy:
+        labels: [info=database]
+        placement:
+          constraints: [node.role == manager]
+
+networks:
+      app:
+
+```
+
+The application image to docker is build with docker-maven-plugin do spotify (see on the pom.xml)
+
+**Images availiable in dockerhub**
+
+![Alt](/wp.png "Docker Hub")
+
+
+
+
 # The assignment
 
-• Provide 2 http endpoints that accepts JSON base64 encoded binary data on both endpoints o <host>/v1/diff/<ID>/left and <host>/v1/diff/<ID>/right
-• The provided data needs to be diff-ed and the results shall be available on a third end point o <host>/v1/diff/<ID>
+* Provide 2 http endpoints that accepts JSON base64 encoded binary data on both endpoints o <host>/v1/diff/<ID>/left and <host>/v1/diff/<ID>/right
+
+I could have the v1 accessible on the '/' setting this information in the jboss-web.xml localized in the WEB-INF Folder, but I decide to keep as usual 
+in Jboss server where each application raises a context. I did that for make a maven plugin (jaxrs-analyzer-maven-plugin), work properly and automatically 
+to generate a documentation to API using Swagger.
+
+That documentation are availiable in 
+
+**http://<host>:8080/waes/apidocs**
+
+So, to access the endpoints you need to hit:
+
+ **http://<hots>:8080/waes/v1/diff/<ID>/left**
+ **http://<hots>:8080/waes/v1/diff/<ID>/right**
+ 
+# The test enviroment 
+
+To Unit Test I am runnin Junit With Mockito and Powermock.
+To Integration Tests I am using Arquilian.
+
+To run Unit and Integration tests run the command bellow and the arquillian chameleon will download a wildfly container and will configure
+a H2 Database to run the integration tests.
+
+
+```
+mvn clean install -Pwildfly-as-managed -P tests
+
+```
+ 
+* The provided data needs to be diff-ed and the results shall be available on a third end point o <host>/v1/diff/<ID>
+
+ **http://<hots>:8080/waes/v1/diff/<ID>**
+
+
 • The results shall provide the following info in JSON format
-o If equal return:
+
+* If equal return:
 
 
 ```
@@ -12,190 +134,46 @@ o If equal return:
 }
 
 ```
-o If not of equal size just return that
-o If of same size provide insight in where the diffs are, actual diffs are not needed.
-§ So mainly offsets + length in the data
-• Make assumptions in the implementation explicit, choices are good but need to be
+
+* If not of equal size just return:
+
+{
+    "STATUS": "DIFFERENT_LENGHTS"
+}
+
+* If of same size provide insight in where the diffs are, for example:
+
+```
+
+{
+    "STATUS": "SAME_LENGHTS",
+    "DIFFERENCES": "[2]"
+}
+
+```
+
+
+
+* Make assumptions in the implementation explicit, choices are good but need to be
 communicated
 
-## WebServices REST
+There is mpre the one way to approach the problem, the simplest would be have just one entity (Diff), that will have to binary data (left and right). 
+Assuming that this "API" Will continue to evolve I decide by one alternative approach to have an entity called Diff that have relationships with
+another entity called Data. I chose this approach, because having this data separation would be simple to introduce another entity between this two, that
+could establish a relationship among them, doing that we could have diff that combine datas already persisted. For example:
 
-To access the services you shall use http://localhost:8080/PlayWithJavaEE/rest/{serviceName}/  
+Diff(1) compares Data(1) and Data(2)
+Diff(2) compares Data(2) and Data(3)
+Diff(3) compares Data(1) and Data(3)
 
-# Testing
-
-I have configured integration tests through Arquillian. There are a few ways to run this tests, each one has a profile in pom.xml, as follow:
-
-```xml
-		<profile>
-			<id>wildfly-as-managed</id>
-			<properties>
-				<arquillian.container.port>10090</arquillian.container.port>
-				<arquillian.container>managed</arquillian.container>
-			</properties>
-			<dependencies>
-				<dependency>
-					<groupId>org.arquillian.container</groupId>
-					<artifactId>arquillian-container-chameleon</artifactId>
-					<version>${version.arquillian_chameleon}</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-		</profile>
-		<profile>
-			<id>wildfly-as-remote</id>
-			<properties>
-				<arquillian.container.port>9990</arquillian.container.port>
-				<arquillian.container>remote</arquillian.container>
-			</properties>
-			<dependencies>
-				<dependency>
-					<groupId>org.arquillian.container</groupId>
-					<artifactId>arquillian-container-chameleon</artifactId>
-					<version>${version.arquillian_chameleon}</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-		</profile>
-		<profile>
-			<id>wildfly-docker</id>
-			<properties>
-				<launch>wildfly-docker</launch>
-			</properties>
-			<dependencies>
-				<dependency>
-					<groupId>org.arquillian.cube</groupId>
-					<artifactId>arquillian-cube-docker</artifactId>
-					<version>${version.arquillian_cube}</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.arquillian.container</groupId>
-					<artifactId>arquillian-container-chameleon</artifactId>
-					<version>${version.arquillian_chameleon}</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-		</profile>
-		<profile>
-			<id>wildfly-docker-image</id>
-			<properties>
-				<launch>wildfly-docker-image</launch>
-			</properties>
-			<dependencies>
-				<dependency>
-					<groupId>org.arquillian.cube</groupId>
-					<artifactId>arquillian-cube-docker</artifactId>
-					<version>${version.arquillian_cube}</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.arquillian.cube</groupId>
-					<artifactId>arquillian-cube-containerless</artifactId>
-					<version>${version.arquillian_cube}</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-		</profile>
-```
-Which one of them has a container qualifier associated in arquillian.xml:
-
-```xml
-    <container qualifier="chameleon" default="false">
-		<configuration>
-			<property name="chameleonTarget">wildfly:9.0.0.Final:${arquillian.container}</property>
-			<property name="outputToConsole">true</property>
-			<property name="javaVmArguments">-Xmx512m -XX:MaxPermSize=256m -Djboss.bind.address=localhost
-                -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n
-                -Djboss.socket.binding.port-offset=100
-                -Djboss.management.native.port=9990
-                -Duser.country=BR -Duser.language=pt -Duser.timezone=GMT-03:00
-            </property>
-			<!-- as portas sao diferentes entre o managed(usa offset para subir em 
-				porta diferente) e remote (porta 9999) -->
-			<property name="managementPort">${arquillian.container.port}</property>
-		</configuration>
-	</container>
-	<container qualifier="wildfly-docker" default="false">
-		<configuration>
-			<property name="chameleonTarget">wildfly:9.0.0.Final:remote</property>
-			<property name="username">admin</property>
-			<property name="password">Admin#70365</property>
-		</configuration>
-	</container>
-	<container qualifier="wildfly-docker-image" default="true">
-		<configuration>
-			<property name="containerlessDocker">wildfly-image</property>
-			<property name="embeddedPort">8082</property>
-		</configuration>
-	</container>
-```
-
-Just one of them can be marked as default, up there the Arquillian is configured to run tests against a container. In that case Arquillian will use Chameleon conteiner to run tests remotely in a wildfly that runs in a docker container. 
-
-The image docker which receives the application is published in docker hub as adrianofonseca/wildfly:9.0.0.Final. This is basecally the official wildfly image I just have added the iproute which provides ss command used by arquillian-cube.
-
-To alternate between the just change the profile in the maven command, for instance, if you want that maven download the wildfly, start it and run the tests, just past the profile wildfly-as-managed:
-
-**mvn clean package -Pwildfly-as-managed** (but, remember the chameleon qualifier must be marked as default true on arquillian.xml)
-
-**PS:** to pay attention in the port number among the wildfly version.
+Of course this is an improvement suggestion. Currently we are on the middle of the path, but we could implement that with litle affort. 
+In Order to persue the HATEOS level 2 at leaest a try to keep the conventions about the HTTP Verbs, to use post to create data, delete to remove and get
+to retrieve them. When some change in Data is tried using POST The sistem generate a HTTP 405 (method not allowed). Therefore, a nice improvement would be 
+implement the endpoints to update left and right data.
 
 
-#Data Base Configuration
+# Extras
 
-
-For configure the data source from wildfly, you will follow the steps bellow:
-
-1. Create the path $WILDFLY_HOME/modules/org/postgresql/main. The modules/org part should already exist, make directories for the rest.
-
-2. In $JBOSS_HOME/modules/org/postgresql/main/module.xml with the following content, changing the resource-root entry for the PgJDBC driver to refer to the driver you wish to use.
-
-```xml
-<?xml version="1.0" encoding="UTF-8"?>
-<module xmlns="urn:jboss:module:1.1" name="org.postgresql">
-     <resources>
-         <resource-root path="postgresql-9.1-902.jdbc4.jar"/>
-     </resources>
-     <dependencies>
-         <module name="javax.api"/>
-         <module name="javax.transaction.api"/>
-         <module name="javax.servlet.api" optional="true"/>
-     </dependencies>
- </module>
- ```
-
-3. Into the same directory as module.xml place postgresql-9.1-902.jdbc4.jar
-4. Start JBoss AS
-5. Open jboss-cli by running $JBOSS_HOME/bin/jboss-cli --connect
-6. Run the command:
-
-```
-/subsystem=datasources/jdbc-driver=postgresql:add(driver-name=postgresql, driver-class-name=org.postgresql.Driver, driver-module-name=org.postgresql)
-```
-
-Thas is what you need to put in your standalone xml:
-
-```xml	
-			<datasource jndi-name="java:jboss/datasources/AppDS" pool-name="AppDS" enabled="true" use-java-context="true">
-                    <connection-url>jdbc:postgresql://localhost:5432/app</connection-url>
-                    <driver>postgresql-driver</driver>
-                    <transaction-isolation>TRANSACTION_READ_COMMITTED</transaction-isolation>
-                    <pool>
-                        <min-pool-size>10</min-pool-size>
-                        <max-pool-size>100</max-pool-size>
-                        <prefill>true</prefill>
-                    </pool>
-                    <security>
-                        <user-name>app</user-name>
-                        <password>app</password>
-                    </security>
-                    <statement>
-                        <prepared-statement-cache-size>32</prepared-statement-cache-size>
-                        <share-prepared-statements>true</share-prepared-statements>
-                    </statement>
-                </datasource>
-                 <drivers>
-                    <driver name="postgresql-driver" module="org.postgresql"/>
-                </drivers>
- ```
+**DELETE** Diff - Sending DELETE HTTP Verb to  **http://<hots>:8080/waes/v1/diff/<ID>**, will dele Diff with left and right data;
+**GET** All Diffs  - Sending GET HTTP Verb to  **http://<hots>:8080/waes/v1/diff/>**
+**GET** Data from a specific Diff - **http://<hots>:8080/waes/v1/diff/<ID>/Data>**
